# EReader

./: .gitignore  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
app/: build.gradle.kts
app/src/assets/reader/: index.html
app/src/main/: AndroidManifest.xml
app/src/main/assets/reader/: index.html
app/src/main/assets/reader/css/: reader.css
app/src/main/assets/reader/css/core/: base.css
app/src/main/assets/reader/css/features/: content.css
app/src/main/assets/reader/css/render/: transitions.css  viewer.css
app/src/main/assets/reader/js/core/: bootstrap.js  events.js  runtime.js  utils.js
app/src/main/assets/reader/js/features/: annotations.js  listen.js  menus.js  search.js
app/src/main/assets/reader/js/render/: paged.js  paper_turnjs.js  real_pageflip.js  render.js  scrolled.js  transitions.js
app/src/main/assets/reader/js/styles/: content.js  media.js  settings.js  utils.js
app/src/main/cpp/: CMakeLists.txt  mobi_native.cpp
app/src/main/java/com/dyu/ereader/: AppContainer.kt  EReaderApplication.kt  MainActivity.kt
app/src/main/java/com/dyu/ereader/di/: DataModule.kt  FeatureModule.kt  RepositoryModule.kt
app/src/main/java/com/dyu/ereader/ui/: AppNavHost.kt  MainViewModel.kt
app/src/main/java/com/dyu/ereader/util/: EpubMetadataReader.kt  Hashing.kt  Logger.kt  (+2 more)
app/src/main/res/drawable/: ic_launcher_foreground.xml  ic_launcher_monochrome.xml
app/src/main/res/values/: colors.xml  themes.xml
app/src/main/res/values-night/: colors.xml
docs/: FILE_MAP.md  TECHNICAL_SUMMARY.md
gradle/: libs.versions.toml
(+257 files in other folders)
